Make it work on macos

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,15 +1,12 @@
-pyaudio
 langchain
 langchain-community
 langchain_google_genai
 langchain_openai
 openai
 speechrecognition
-pocketsphinx
 gtts
-audioplayer
-PyGObject # required by audioplayer
 langdetect
+pygame # to play gtts sounds
 
 pyowm
 wikipedia
@@ -17,7 +14,7 @@ youtube-search
 arxiv
 # duckduckgo-search requires curl impersonate that is not available on armv7
 yt-dlp
-OPi.GPIO
+
 
 # required by pvporcupine
 pvporcupine
