--- a/src/Pipfile
+++ b/src/Pipfile
@@ -12,7 +12,6 @@ pocketsphinx = "*"
 langchain-google-genai = "*"
 gtts = "*"
 pygame = "*"
-pyaudio = "*"
 langchain-openai = "*"
 pyowm = "*"
 wikipedia = "*"
@@ -25,6 +24,10 @@ pvporcupine = "*"
 pvrecorder = "*"
 audioplayer = "*"
 pydispatcher = "*"
+numpy = "*"
+pyaudio = "*"
+microwakeword = {ref = "main", git = "https://github.com/dzianisv/microWakeWord.git"}
+realtimetts = "*"
 
 [dev-packages]
 pylint = "*"
